Update Having Fun with CAD.html

--- a/Having Fun with CAD.html
+++ b/Having Fun with CAD.html
@@ -18,14 +18,12 @@ Having Fun with CAD <!HEADING>
 Proceeding in the Graphical communication class, I realised that computer-aided designing is something which I love to do. As a part of my final project, I chose to model a toy rocket taking a toy as a base model.This was helpful in understanding and revicing the concept of assemblies in CATIA V5. This project also gave me confidence in making some complex engineering drawings (drafting in CATIA V5).
 
 <center>
-<img src = "C:\Users\lenovo\Downloads\rocket.jpg" width = 500 height = 500>
+<img src = "https://github.com/Heer03/Resume/blob/6dc54770fedc24f80e46690b9650c89d7859363e/rocket.jpg" width = 500 height = 500>
 </center>
 </p>
 
 <p>
 A group project of this class involved making a 3d printed cube puzzle with five unique parts. This involved the use of proper modelling techniques, assemblies, applying best tolerances, and working with 3d printing software(ultimaker cura).
-
-ADD IMAGE HERE!
 
 </p>
 
