--- a/Work experience.html
+++ b/Work experience.html
@@ -19,9 +19,8 @@ In my Freshman year, I completed general chemistry (CHM 110), and joined Academi
 </p>
 
 <center>
-<img src = "C:\Users\lenovo\Downloads\badge.jpg" width = "500" height = "300">
+<img src = "https://github.com/Heer03/Resume/blob/b23bef5cb67ca02a9aa7f62ad38d26bc676fb835/badge.jpg" width = "500" height = "300">
 
-<!img src = "C:\Users\lenovo\Downloads\certificate.jpg" width = 400 height = 500>
 </center>
 
 <p>
