--- a/Work experience.html
+++ b/Work experience.html
@@ -19,7 +19,7 @@ In my Freshman year, I completed general chemistry (CHM 110), and joined Academi
 </p>
 
 <center>
-<img src = "https://github.com/Heer03/Resume/blob/b23bef5cb67ca02a9aa7f62ad38d26bc676fb835/badge.JPG" width = "500" height = "300">
+<img src = "https://heer03.github.io/Resume/badge.jpg" width = "500" height = "300">
 
 </center>
 
