--- a/Having Fun with CAD.html
+++ b/Having Fun with CAD.html
@@ -18,7 +18,7 @@ Having Fun with CAD <!HEADING>
 Proceeding in the Graphical communication class, I realised that computer-aided designing is something which I love to do. As a part of my final project, I chose to model a toy rocket taking a toy as a base model.This was helpful in understanding and revicing the concept of assemblies in CATIA V5. This project also gave me confidence in making some complex engineering drawings (drafting in CATIA V5).
 
 <center>
-<img src = "https://github.com/Heer03/Resume/blob/main/rocket.jpg" width = 500 height = 500>
+<img src = "https://heer03.github.io/Resume/rocket.jpg" width = 500 height = 500>
 </center>
 </p>
 
@@ -31,7 +31,7 @@ A group project of this class involved making a 3d printed cube puzzle with five
 In addition to this, involving with a club named <i>"Robotic Warriors"</i> is helping me getting familiar with Autodesk inventor. As a part of the club, me and two other another members of the club are making the body of the robot. I feel that though small, this is a good step towards learing a new software. Aditionally, to adapt faster with these softwares and because of my curiosity to learn more about computer aided designing, I am currently learning <i>generative shape design</i> work bench in CATIA V5 and different tools in <i>standard modelling</i> in inventor. Here are some of my works that I enjoyed doing other than the projects. The base idea for modelling this part was a turbine.
 
 <center>
-<img src = "C:\Users\lenovo\Downloads\turbine.jpg" width = 400, heigth = 400>
+<img src = "https://heer03.github.io/Resume/turbine.jpg" width = 400, heigth = 400>
 </center>
 
 </p>
