--- a/Having Fun with CAD.html
+++ b/Having Fun with CAD.html
@@ -28,7 +28,7 @@ A group project of this class involved making a 3d printed cube puzzle with five
 </p>
 
 <p>
-In addition to this, involving with a club named <i>"Robotic Warriors"</i> is helping me getting familiar with Autodesk inventor. As a part of the club, me and two other another members of the club are making the body of the robot. I feel that though small, this is a good step towards learing a new software. Aditionally, to adapt faster with these softwares and because of my curiosity to learn more about computer aided designing, I am currently learning <i>generative shape design</i> work bench in CATIA V5 and different tools in <i>standard modelling</i> in inventor. Here are some of my works that I enjoyed doing other than the projects. The base idea for modelling this part was a turbine.
+In addition to this, involving with a club named <i>"Robotic Warriors"</i> is helping me getting familiar with Autodesk inventor. As a part of the club, me and two other another members of the club are making the body of the robot. I feel that though small, this is a good step towards learing a new software. Aditionally, to adapt faster with these softwares and because of my curiosity to learn more about computer aided designing, I am currently learning <i>generative shape design</i> work bench in CATIA V5 and different tools in <i>standard modelling</i> in inventor. Here are some of my works that I enjoyed doing other than the projects. The base idea for modelling a turbine(picture 1) and a passanger airplane(picture 2).
 
 <center>
 <img src = "https://heer03.github.io/Resume/turbine.jpg" width = 400, heigth = 400>
