--- a/About me.html
+++ b/About me.html
@@ -19,23 +19,21 @@ About me <!HEADING>
 
 <p>In addition to that, I also have my heart in art and paintings. My hobbies include drawing, sketching and I enjoy painting landscapes during free time.</p>
 
-<p>Here is my protfolio walks you through my journey from a high-schooler to a being a sophomore. (make a seperate welcoming page and add this line to it).</p>
+<p>Here is my protfolio walks you through my journey from a high-schooler to a being a sophomore, and developing my interest into this sector.</p>
 
-<p>Here is a glimpse of my interest and hobbies</p>
 
-<!----------------------add images------------------------------->
 </font>
 
 <!---------------------ABOUT ME ENDS HERE------------------------>
 
 <p>
 <!---------------HYPERLINK FOR WORK EXPERIENCES----------->
-<a href = file:///C:/Users/lenovo/Desktop/Professional%20documents/Work%20experience.html> Work Experiences </a>
+<a href = https://heer03.github.io/Resume/Work%20experience> Work Experiences </a>
 </p>
 
 <p>
 <!---------------HYPERLINK FOR CAD----------->
-<a href = file:///C:/Users/lenovo/Desktop/Professional%20documents/Having%20Fun%20with%20CAD.html> CAD </a>
+<a href = https://heer03.github.io/Resume/Having%20Fun%20with%20CAD> CAD </a>
 </p>
 </body>
 </html>
