--- a/Work experience.html
+++ b/Work experience.html
@@ -20,6 +20,7 @@ In my Freshman year, I completed general chemistry (CHM 110), and joined Academi
 
 <center>
 <img src = "https://heer03.github.io/Resume/badge.jpg" width = "500" height = "300">
+<img src = "https://heer03.github.io/Resume/certificate%20(2).jpg" width = "500" height = "300">  
 
 </center>
 
