--- a/About me.html
+++ b/About me.html
@@ -17,7 +17,7 @@ About me <!HEADING>
 
 <p>Hello! My name is Heer Patel. I am a sophomore majoring in Aerospace engineering. Talking about my interest in this field, engineering, more precisely anything related to rockets, space vehicles, or flights has always been fascinating to me. I am keen to learn various different techniques and aspects to build these vehicles and it will awesome if having hands-on experience to anything related adds on during my student journey. As this is a vast field, there are many differnt opportunities and areas that individuals can proliferrate in. Among them, my interest primarily includes computer aided designing, followed by coding.</p>
 
-<p>In addition to that, I also have my heart in art and paintings. My hobbies include drawing, sketching and I enjoy painting landscapes during free time.</p>
+<p>In addition to that, I also have my heart in art and paintings. My hobbies include drawing, sketching and I enjoy painting landscapes during free time. Coding is something that I like to do as my hobbie and so I created this website as a part of my leisure activity. I hope you enjoy reading about my projects and work experiences.</p>
 
 <p>Here is my protfolio walks you through my journey from a high-schooler to a being a sophomore, and developing my interest into this sector.</p>
 
